export const PRODUCT_COMMAND_PACKAGE_NAME = "product_command"

export const PRODUCT_COMMAND_SERVICE_NAME = "ProductCommandService"

export const PRODUCT_QUERY_PACKAGE_NAME = "product_query"

export const PRODUCT_QUERY_SERVICE_NAME = "ProductQueryService"

export const PRODUCT_QUERY_PROTO_PATH = "apps/proto/query.proto"